--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
         resultGroup.appendChild(card);
       });
 
+      // 强制样式更新
+      resultGroup.getBoundingClientRect();
+      console.log(`Generated ${allResults.length} result cards`);
+
       resultGroup.style.display = 'block';
       actionBtn.textContent = '↺ 重置';
     }
@@ -233,7 +237,6 @@
       display: -webkit-flex; /* 兼容 Safari */
       flex-direction: column;
       -webkit-flex-direction: column; /* 兼容 Safari */
-      gap: 64px !important; /* 加大卡片间距，确保 Chrome 和 Safari 一致 */
       margin-top: 10px;
     }
     .result-card {
@@ -243,6 +246,10 @@
       padding: 16px;
       box-shadow: var(--shadow);
       overflow: hidden;
+      margin-bottom: 32px; /* 使用 margin-bottom 替代 gap */
+    }
+    .result-card:last-child {
+      margin-bottom: 0; /* 最后一个卡片无底部间距 */
     }
     .result-card-with-separator {
       border-bottom: 1px solid var(--border); /* 非最后一个卡片添加分隔线 */
